fixed styling issue of overlapping bootstrap row components

--- a/src/components/styles/Login.css
+++ b/src/components/styles/Login.css
@@ -4,8 +4,8 @@
   box-sizing: border-box;
 }
 
-.row3 {
-  background: purple;
+.container .row {
+  background: white;
   border-radius: 30px;
   box-shadow: 12px 12px 22px;
 }
